Fixed #283 - SurveyJS Tabulator on mobiles

--- a/src/tables/table.scss
+++ b/src/tables/table.scss
@@ -225,6 +225,7 @@ a.sa-table__btn {
 
 .sa-table__entries {
   float: right;
+  white-space: nowrap;
 }
 
 .sa-table__entries-label {
