--- a/src/tables/tabulator.scss
+++ b/src/tables/tabulator.scss
@@ -44,6 +44,7 @@ $root-font-size: 14px;
 .sa-tabulator__header {
   padding: 20px 13px;
   background-color: $background-gray;
+  overflow: auto;
   &:after {
     content: "";
     clear: both;
